// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormSelect should render when passed a prompt and options 1`] = `
<div>
  <select
    id=""
    onBlur={[Function]}
    onChange={[Function]}
  >
    <option
      selected={true}
      value=""
    >
      Select an item
    </option>
    <option
      selected={false}
      value="TEST1"
    >
      test 1
    </option>
    <option
      selected={false}
      value="TEST2"
    >
      test 2
    </option>
  </select>
</div>
`;

<<<<<<< HEAD
exports[`FormSelect should render with just required props passed 1`] = `
=======
exports[`FormSelect should render with required props 1`] = `
>>>>>>> 1e3818fe1ed61deeda96881e0e7a718d44c1dd4e
<div>
  <select
    id=""
    onBlur={[Function]}
    onChange={[Function]}
  >
    <option
      selected={true}
      value="TEST1"
    >
      test 1
    </option>
    <option
      selected={false}
      value="TEST2"
    >
      test 2
    </option>
  </select>
</div>
`;
